@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2017 Amazon.com, Inc. or its affiliates. All Rights Reserved.
+ * Copyright 2010-2019 Amazon.com, Inc. or its affiliates. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License").
  * You may not use this file except in compliance with the License.
@@ -26,21 +26,32 @@ import com.amazon.sqs.javamessaging.message.SQSMessage;
 import com.amazon.sqs.javamessaging.message.SQSObjectMessage;
 import com.amazon.sqs.javamessaging.message.SQSTextMessage;
 import com.amazon.sqs.javamessaging.util.ExponentialBackoffStrategy;
-import com.amazonaws.util.Base64;
-import com.amazonaws.services.sqs.model.*;
 
-import javax.jms.*;
+import software.amazon.awssdk.services.sqs.model.Message;
+import software.amazon.awssdk.services.sqs.model.Message.Builder;
+import software.amazon.awssdk.services.sqs.model.MessageAttributeValue;
+import software.amazon.awssdk.services.sqs.model.MessageSystemAttributeName;
+import software.amazon.awssdk.services.sqs.model.ReceiveMessageResponse;
+import software.amazon.awssdk.services.sqs.model.ReceiveMessageRequest;
+import software.amazon.awssdk.utils.BinaryUtils;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.ObjectOutputStream;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import javax.jms.JMSException;
+import javax.jms.ObjectMessage;
+
 import org.junit.Before;
 import org.junit.Test;
+import org.junit.runner.RunWith;
+import org.junit.runners.Parameterized;
+import org.junit.runners.Parameterized.Parameters;
 import org.mockito.ArgumentMatcher;
 
 import static org.junit.Assert.assertEquals;
@@ -55,12 +66,12 @@ import static org.mockito.Mockito.when;
 /**
  * Test the SQSMessageConsumerPrefetchTest class
  */
+@RunWith(Parameterized.class)
 public class SQSMessageConsumerPrefetchFifoTest {
 
     private static final String NAMESPACE = "123456789012";
     private static final String QUEUE_NAME = "QueueName.fifo";
     private static final  String QUEUE_URL = NAMESPACE + "/" + QUEUE_NAME;
-    private static final int NUMBER_OF_MESSAGES_TO_PREFETCH = 10;
 
     private Acknowledger acknowledger;
     private NegativeAcknowledger negativeAcknowledger;
@@ -70,6 +81,17 @@ public class SQSMessageConsumerPrefetchFifoTest {
 
     private AmazonSQSMessagingClientWrapper amazonSQSClient;
 
+    @Parameters
+    public static List<Object[]> getParameters() {
+        return Arrays.asList(new Object[][] { {0}, {1}, {5}, {10}, {15} });
+    }
+   
+    private final int numberOfMessagesToPrefetch;
+    
+    public SQSMessageConsumerPrefetchFifoTest(int numberOfMessagesToPrefetch) {
+        this.numberOfMessagesToPrefetch = numberOfMessagesToPrefetch;
+    }
+    
     @Before
     public void setup() {
 
@@ -90,7 +112,7 @@ public class SQSMessageConsumerPrefetchFifoTest {
 
         consumerPrefetch =
                 spy(new SQSMessageConsumerPrefetch(sqsSessionRunnable, acknowledger, negativeAcknowledger,
-                        sqsDestination, amazonSQSClient, NUMBER_OF_MESSAGES_TO_PREFETCH));
+                        sqsDestination, amazonSQSClient, numberOfMessagesToPrefetch));
 
         consumerPrefetch.backoffStrategy = backoffStrategy;
     }
@@ -105,15 +127,17 @@ public class SQSMessageConsumerPrefetchFifoTest {
          * Set up consumer prefetch and mocks
          */
 
-        List<com.amazonaws.services.sqs.model.Message> messages = new ArrayList<com.amazonaws.services.sqs.model.Message>();
-        for (int i = 0; i < 10; i++) {
-            messages.add(createValidFifoMessage(i, "G" + i));
+        final int numMessages = numberOfMessagesToPrefetch > 0 ? numberOfMessagesToPrefetch : 1;
+        List<Message> messages = new ArrayList<>();
+        for (int i = 0; i < numMessages; i++) {
+            messages.add(createValidFifoMessage(i, "G" + i).build());
         }
 
         // First start the consumer prefetch
         consumerPrefetch.start();
 
         // Mock SQS call for receive message and return messages
+        final int receiveMessageLimit = Math.min(10, numMessages);
         when(amazonSQSClient.receiveMessage(argThat(new ArgumentMatcher<ReceiveMessageRequest>() {
                     @Override
                     public boolean matches(Object argument) {
@@ -121,16 +145,16 @@ public class SQSMessageConsumerPrefetchFifoTest {
                             return false;
                         ReceiveMessageRequest other = (ReceiveMessageRequest)argument;
                         
-                        return other.getQueueUrl().equals(QUEUE_URL)
-                                && other.getMaxNumberOfMessages() == 10
-                                && other.getMessageAttributeNames().size() == 1
-                                && other.getMessageAttributeNames().get(0).equals(SQSMessageConsumerPrefetch.ALL)
-                                && other.getWaitTimeSeconds() == SQSMessageConsumerPrefetch.WAIT_TIME_SECONDS
-                                && other.getReceiveRequestAttemptId() != null
-                                && other.getReceiveRequestAttemptId().length() > 0;
+                        return other.queueUrl().equals(QUEUE_URL)
+                                && other.maxNumberOfMessages() == receiveMessageLimit
+                                && other.messageAttributeNames().size() == 1
+                                && other.messageAttributeNames().get(0).equals(SQSMessageConsumerPrefetch.ALL)
+                                && other.waitTimeSeconds() == SQSMessageConsumerPrefetch.WAIT_TIME_SECONDS
+                                && other.receiveRequestAttemptId() != null
+                                && other.receiveRequestAttemptId().length() > 0;
                     }            
                 })))
-                .thenReturn(new ReceiveMessageResult().withMessages(messages));
+                .thenReturn(ReceiveMessageResponse.builder().messages(messages).build());
 
         // Mock isClosed and exit after a single prefetch loop
         when(consumerPrefetch.isClosed())
@@ -139,6 +163,11 @@ public class SQSMessageConsumerPrefetchFifoTest {
                 .thenReturn(false)
                 .thenReturn(true);
 
+        /*
+         * Request a message (only relevant when prefetching is off).
+         */
+        consumerPrefetch.requestMessage();
+        
         /*
          * Run the prefetch
          */
@@ -161,15 +190,32 @@ public class SQSMessageConsumerPrefetchFifoTest {
         assertEquals(0, consumerPrefetch.retriesAttempted);
 
         // Ensure message queue was filled with expected messages
-        assertEquals(10, consumerPrefetch.messageQueue.size());
+        assertEquals(numMessages, consumerPrefetch.messageQueue.size());
         int index = 0;
         for (SQSMessageConsumerPrefetch.MessageManager messageManager : consumerPrefetch.messageQueue) {
-            com.amazonaws.services.sqs.model.Message mockedMessage = messages.get(index);
+            Message mockedMessage = messages.get(index);
             SQSMessage sqsMessage = (SQSMessage)messageManager.getMessage();
-            assertEquals("Receipt handle is the same", mockedMessage.getReceiptHandle(), sqsMessage.getReceiptHandle());
-            assertEquals("Group id is the same", mockedMessage.getAttributes().get(SQSMessagingClientConstants.MESSAGE_GROUP_ID), sqsMessage.getStringProperty(SQSMessagingClientConstants.JMSX_GROUP_ID));
-            assertEquals("Sequence number is the same", mockedMessage.getAttributes().get(SQSMessagingClientConstants.SEQUENCE_NUMBER), sqsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_SEQUENCE_NUMBER));
-            assertEquals("Deduplication id is the same", mockedMessage.getAttributes().get(SQSMessagingClientConstants.MESSAGE_DEDUPLICATION_ID), sqsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_DEDUPLICATION_ID));
+            assertEquals(
+                    "Receipt handle is the same",
+                    mockedMessage.receiptHandle(), sqsMessage.getReceiptHandle());
+            assertEquals(
+                    "Group id is the same",
+                    mockedMessage
+                            .attributes()
+                            .get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.MESSAGE_GROUP_ID)),
+                    sqsMessage.getStringProperty(SQSMessagingClientConstants.JMSX_GROUP_ID));
+            assertEquals(
+                    "Sequence number is the same",
+                    mockedMessage
+                            .attributes()
+                            .get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.SEQUENCE_NUMBER)),
+                    sqsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_SEQUENCE_NUMBER));
+            assertEquals(
+                    "Deduplication id is the same",
+                    mockedMessage
+                            .attributes()
+                            .get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.MESSAGE_DEDUPLICATION_ID)),
+                    sqsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_DEDUPLICATION_ID));
             
             index++;
         }
@@ -184,9 +230,8 @@ public class SQSMessageConsumerPrefetchFifoTest {
         /*
          * Set up consumer prefetch and mocks
          */
-        com.amazonaws.services.sqs.model.Message message = createValidFifoMessage(1, "G");
-        // Return message attribute with no message type attribute
-        message.setBody("MessageBody");
+    	// Return message attribute with no message type attribute
+    	Message message = createValidFifoMessage(1, "G").body("MessageBody").build();
 
         /*
          * Convert the SQS message to JMS Message
@@ -198,9 +243,9 @@ public class SQSMessageConsumerPrefetchFifoTest {
          */
         assertTrue(jmsMessage instanceof SQSTextMessage);
         assertEquals(((SQSTextMessage) jmsMessage).getText(), "MessageBody");
-        assertEquals(message.getAttributes().get(SQSMessagingClientConstants.MESSAGE_DEDUPLICATION_ID), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_DEDUPLICATION_ID));
-        assertEquals(message.getAttributes().get(SQSMessagingClientConstants.SEQUENCE_NUMBER), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_SEQUENCE_NUMBER));
-        assertEquals(message.getAttributes().get(SQSMessagingClientConstants.MESSAGE_GROUP_ID), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMSX_GROUP_ID));
+        assertEquals(message.attributes().get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.MESSAGE_DEDUPLICATION_ID)), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_DEDUPLICATION_ID));
+        assertEquals(message.attributes().get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.SEQUENCE_NUMBER)), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_SEQUENCE_NUMBER));
+        assertEquals(message.attributes().get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.MESSAGE_GROUP_ID)), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMSX_GROUP_ID));
     }
 
     /**
@@ -212,17 +257,22 @@ public class SQSMessageConsumerPrefetchFifoTest {
         /*
          * Set up consumer prefetch and mocks
          */
+    	// Return message attributes with message type 'BYTE'
+    	MessageAttributeValue messageAttributeValue = MessageAttributeValue.builder()
+    			.stringValue(SQSMessage.BYTE_MESSAGE_TYPE)
+    			.dataType(SQSMessagingClientConstants.STRING)
+    			.build();
 
-        com.amazonaws.services.sqs.model.Message message = createValidFifoMessage(1, "G");
-        // Return message attributes with message type 'BYTE'
-        MessageAttributeValue messageAttributeValue = new MessageAttributeValue();
-        messageAttributeValue.setStringValue(SQSMessage.BYTE_MESSAGE_TYPE);
-        messageAttributeValue.setDataType(SQSMessagingClientConstants.STRING);
-        message.getMessageAttributes().put(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);
-
-        byte[] byteArray = new byte[] { 1, 0, 'a', 65 };
-        message.setBody(Base64.encodeAsString(byteArray));
-
+    	HashMap<String,MessageAttributeValue> messageAttributes = new HashMap<>();
+    	messageAttributes.put(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);
+    	
+    	byte[] byteArray = new byte[] { 1, 0, 'a', 65 };
+    	
+    	Message message = createValidFifoMessage(1, "G")
+    			.messageAttributes(messageAttributes)
+    			.body(BinaryUtils.toBase64(byteArray))
+    			.build();
+        
         /*
          * Convert the SQS message to JMS Message
          */
@@ -235,9 +285,9 @@ public class SQSMessageConsumerPrefetchFifoTest {
         for (byte b : byteArray) {
             assertEquals(b, ((SQSBytesMessage)jmsMessage).readByte());
         }
-        assertEquals(message.getAttributes().get(SQSMessagingClientConstants.MESSAGE_DEDUPLICATION_ID), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_DEDUPLICATION_ID));
-        assertEquals(message.getAttributes().get(SQSMessagingClientConstants.SEQUENCE_NUMBER), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_SEQUENCE_NUMBER));
-        assertEquals(message.getAttributes().get(SQSMessagingClientConstants.MESSAGE_GROUP_ID), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMSX_GROUP_ID));
+        assertEquals(message.attributes().get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.MESSAGE_DEDUPLICATION_ID)), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_DEDUPLICATION_ID));
+        assertEquals(message.attributes().get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.SEQUENCE_NUMBER)), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_SEQUENCE_NUMBER));
+        assertEquals(message.attributes().get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.MESSAGE_GROUP_ID)), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMSX_GROUP_ID));
     }
 
     /**
@@ -249,15 +299,20 @@ public class SQSMessageConsumerPrefetchFifoTest {
         /*
          * Set up consumer prefetch and mocks
          */
+    	// Return message attributes with message type 'BYTE'
+    	MessageAttributeValue messageAttributeValue = MessageAttributeValue.builder()
+    			.stringValue(SQSMessage.BYTE_MESSAGE_TYPE)
+    			.dataType(SQSMessagingClientConstants.STRING)
+    			.build();
+    	
+    	HashMap<String,MessageAttributeValue> messageAttributes = new HashMap<>();
+    	messageAttributes.put(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);
 
-        com.amazonaws.services.sqs.model.Message message = createValidFifoMessage(1, "G");
-        // Return message attributes with message type 'BYTE'
-        MessageAttributeValue messageAttributeValue = new MessageAttributeValue();
-        messageAttributeValue.setStringValue(SQSMessage.BYTE_MESSAGE_TYPE);
-        messageAttributeValue.setDataType(SQSMessagingClientConstants.STRING);
-        message.getMessageAttributes().put(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);
-        // Return illegal message body for byte message type
-        message.setBody("Text Message");
+    	// Return illegal message body for byte message type
+    	Message message = createValidFifoMessage(1, "G")
+    			.body("Text Message")
+    			.messageAttributes(messageAttributes)
+    			.build();
 
         /*
          * Convert the SQS message to JMS Message
@@ -279,22 +334,26 @@ public class SQSMessageConsumerPrefetchFifoTest {
         /*
          * Set up consumer prefetch and mocks
          */
+    	// Return message attributes with message type 'OBJECT'
+    	MessageAttributeValue messageAttributeValue = MessageAttributeValue.builder()
+    			.stringValue(SQSMessage.OBJECT_MESSAGE_TYPE)
+    			.dataType(SQSMessagingClientConstants.STRING)
+    			.build();
+    	
+    	HashMap<String,MessageAttributeValue> messageAttributes = new HashMap<>();
+    	messageAttributes.put(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);	
 
-        com.amazonaws.services.sqs.model.Message message = createValidFifoMessage(1, "G");
-        // Return message attributes with message type 'OBJECT'
-        MessageAttributeValue messageAttributeValue = new MessageAttributeValue();
-        messageAttributeValue.setStringValue(SQSMessage.OBJECT_MESSAGE_TYPE);
-        messageAttributeValue.setDataType(SQSMessagingClientConstants.STRING);
-        message.getMessageAttributes().put(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);
-
-        // Encode an object to byte array
-        Integer integer = new Integer("10");
-        ByteArrayOutputStream array = new ByteArrayOutputStream(10);
-        ObjectOutputStream oStream = new ObjectOutputStream(array);
-        oStream.writeObject(integer);
-        oStream.close();
-        
-        message.setBody(Base64.encodeAsString(array.toByteArray()));
+    	// Encode an object to byte array
+    	Integer integer = Integer.valueOf(10);
+    	ByteArrayOutputStream array = new ByteArrayOutputStream(10);
+    	ObjectOutputStream oStream = new ObjectOutputStream(array);
+    	oStream.writeObject(integer);
+    	oStream.close();
+    	
+    	Message message = createValidFifoMessage(1, "G")
+    			.messageAttributes(messageAttributes)
+    			.body(BinaryUtils.toBase64(array.toByteArray()))
+    			.build();
 
         /*
          * Convert the SQS message to JMS Message
@@ -306,9 +365,9 @@ public class SQSMessageConsumerPrefetchFifoTest {
          */
         assertTrue(jmsMessage instanceof SQSObjectMessage);
         assertEquals(integer, ((SQSObjectMessage) jmsMessage).getObject());
-        assertEquals(message.getAttributes().get(SQSMessagingClientConstants.MESSAGE_DEDUPLICATION_ID), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_DEDUPLICATION_ID));
-        assertEquals(message.getAttributes().get(SQSMessagingClientConstants.SEQUENCE_NUMBER), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_SEQUENCE_NUMBER));
-        assertEquals(message.getAttributes().get(SQSMessagingClientConstants.MESSAGE_GROUP_ID), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMSX_GROUP_ID));
+        assertEquals(message.attributes().get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.MESSAGE_DEDUPLICATION_ID)), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_DEDUPLICATION_ID));
+        assertEquals(message.attributes().get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.SEQUENCE_NUMBER)), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_SEQUENCE_NUMBER));
+        assertEquals(message.attributes().get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.MESSAGE_GROUP_ID)), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMSX_GROUP_ID));
     }
 
     /**
@@ -320,14 +379,19 @@ public class SQSMessageConsumerPrefetchFifoTest {
         /*
          * Set up consumer prefetch and mocks
          */
+    	// Return message attributes with message type 'OBJECT'
+    	MessageAttributeValue messageAttributeValue = MessageAttributeValue.builder()
+    	.stringValue(SQSMessage.OBJECT_MESSAGE_TYPE)
+    	.dataType(SQSMessagingClientConstants.STRING)
+    	.build();
+    	
+    	HashMap<String,MessageAttributeValue> messageAttributes = new HashMap<>();
+    	messageAttributes.put(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);	
 
-        com.amazonaws.services.sqs.model.Message message = createValidFifoMessage(1, "G");
-        // Return message attributes with message type 'OBJECT'
-        MessageAttributeValue messageAttributeValue = new MessageAttributeValue();
-        messageAttributeValue.setStringValue(SQSMessage.OBJECT_MESSAGE_TYPE);
-        messageAttributeValue.setDataType(SQSMessagingClientConstants.STRING);
-        message.getMessageAttributes().put(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);
-        message.setBody("Some text that does not represent an object");
+    	Message message = createValidFifoMessage(1, "G")
+    			.messageAttributes(messageAttributes)
+    			.body("Some text that does not represent an object")
+    			.build();
 
         /*
          * Convert the SQS message to JMS Message
@@ -354,14 +418,19 @@ public class SQSMessageConsumerPrefetchFifoTest {
         /*
          * Set up consumer prefetch and mocks
          */
+    	// Return message attributes with message type 'TEXT'
+    	MessageAttributeValue messageAttributeValue = MessageAttributeValue.builder()
+    			.stringValue(SQSMessage.TEXT_MESSAGE_TYPE)
+    			.dataType(SQSMessagingClientConstants.STRING)
+    			.build();
+    	
+    	HashMap<String,MessageAttributeValue> messageAttributes = new HashMap<>();
+    	messageAttributes.put(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);	
 
-        com.amazonaws.services.sqs.model.Message message = createValidFifoMessage(1, "G");
-        // Return message attributes with message type 'TEXT'
-        MessageAttributeValue messageAttributeValue = new MessageAttributeValue();
-        messageAttributeValue.setStringValue(SQSMessage.TEXT_MESSAGE_TYPE);
-        messageAttributeValue.setDataType(SQSMessagingClientConstants.STRING);
-        message.getMessageAttributes().put(SQSMessage.JMS_SQS_MESSAGE_TYPE, messageAttributeValue);
-        message.setBody("MessageBody");
+    	Message message = createValidFifoMessage(1, "G")
+    			.messageAttributes(messageAttributes)
+    			.body("MessageBody")
+    			.build();
         
         /*
          * Convert the SQS message to JMS Message
@@ -372,26 +441,26 @@ public class SQSMessageConsumerPrefetchFifoTest {
          * Verify results
          */
         assertTrue(jmsMessage instanceof SQSTextMessage);
-        assertEquals(message.getBody(), "MessageBody");
-        assertEquals(message.getAttributes().get(SQSMessagingClientConstants.MESSAGE_DEDUPLICATION_ID), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_DEDUPLICATION_ID));
-        assertEquals(message.getAttributes().get(SQSMessagingClientConstants.SEQUENCE_NUMBER), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_SEQUENCE_NUMBER));
-        assertEquals(message.getAttributes().get(SQSMessagingClientConstants.MESSAGE_GROUP_ID), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMSX_GROUP_ID));
+        assertEquals(message.body(), "MessageBody");
+        assertEquals(message.attributes().get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.MESSAGE_DEDUPLICATION_ID)), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_DEDUPLICATION_ID));
+        assertEquals(message.attributes().get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.SEQUENCE_NUMBER)), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMS_SQS_SEQUENCE_NUMBER));
+        assertEquals(message.attributes().get(MessageSystemAttributeName.fromValue(SQSMessagingClientConstants.MESSAGE_GROUP_ID)), jmsMessage.getStringProperty(SQSMessagingClientConstants.JMSX_GROUP_ID));
     }
 
     /*
      * Utility functions
      */
 
-    private com.amazonaws.services.sqs.model.Message createValidFifoMessage(int messageNumber, String groupId) {
+    private Builder createValidFifoMessage(int messageNumber, String groupId) {
         Map<String,String> mapAttributes = new HashMap<String, String>();
         mapAttributes.put(SQSMessagingClientConstants.APPROXIMATE_RECEIVE_COUNT, "1");
         mapAttributes.put(SQSMessagingClientConstants.SEQUENCE_NUMBER, "10000000000000000000" + messageNumber);
         mapAttributes.put(SQSMessagingClientConstants.MESSAGE_DEDUPLICATION_ID, "d" + messageNumber);
         mapAttributes.put(SQSMessagingClientConstants.MESSAGE_GROUP_ID, groupId);
         
-        return new com.amazonaws.services.sqs.model.Message()
-            .withReceiptHandle("r" + messageNumber)
-            .withAttributes(mapAttributes);
+        return Message.builder()
+        		.receiptHandle("r" + messageNumber)
+        		.attributesWithStrings(mapAttributes);
     }
 
 }
